--- a/library-app/package.json
+++ b/library-app/package.json
@@ -13,6 +13,9 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.3.1",
+    "axios": "^0.18.0",
+    "element-ui": "^2.4.4",
     "nuxt": "^1.0.0"
   },
   "devDependencies": {
@@ -23,4 +26,3 @@
     "eslint-plugin-vue": "^4.0.0"
   }
 }
-
